--- a/sites/index.html
+++ b/sites/index.html
@@ -4,6 +4,11 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>This is an example paragraph. 
+		Anything in the <strong>body</strong> tag will appear on the page, 
+		just like this <strong>p</strong> tag and its contents.</p>
+		<p>
+			<img src="LOGO-YOUPI-DOC-2022-CMJN.png">
+		</p>
   </body>
 </html>
