--- a/sites/index2.html
+++ b/sites/index2.html
@@ -7,5 +7,15 @@
     <p>This is an example paragraph.
 		Anything in the <strong>body</strong> tag will appear on the page,
 		just like this <strong>p</strong> tag and its contents.</p>
+		<p>
+			<img src="LOGO-YOUPI-DOC-2022-CMJN.png">
+		</p>
+		<p>
+			<img src="LOGO-YOUPI-DOC-2022-CMJN.png">
+		</p>
+		<A name="anchor-one">This is the location of anchor one.</A>
+		<p>
+			<img src="LOGO-YOUPI-DOC-2022-CMJN.png">
+		</p>
   </body>
 </html>
