--- a/docker_nginx/sites/404.html
+++ b/docker_nginx/sites/404.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Error 400</title>
+    <title>Error 404</title>
   </head>
   <body>
-    <p>400 : Bad Request...</p>
+    <p>404 : Not Found...</p>
   </body>
 </html>
