--- a/www/test/form.html
+++ b/www/test/form.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <h1>Upload a file on the server</h1>
-      <form action="/upload" method="post" enctype="multipart/form-data">
+      <form action="form.html" method="post" enctype="multipart/form-data">
         <text> Envoi ici un fichier binaire </text>
         <input type="file" name="fileToUpload">
         <input type="submit" value="Upload">
