--- a/www/test/index2.html
+++ b/www/test/index2.html
@@ -4,6 +4,6 @@
     <title>Index 2, Location test</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>This is an example paragraph. Index2. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
 </html>
