essais du 5 septembre

--- a/www/test/form.html
+++ b/www/test/form.html
@@ -9,6 +9,7 @@
       <form action="form.html" method="post" enctype="multipart/form-data">
         <text> Envoi ici un fichier binaire </text>
         <input type="file" name="fileToUpload">
+        <input type="file" name="fileToUpload2">
         <input type="submit" value="Upload">
       </form>
     </body>
