--- a/www/404.html
+++ b/www/404.html
@@ -4,6 +4,6 @@
     <title>Error 404</title>
   </head>
   <body>
-    <p>404 : Not Found...</p>
+    <p>404 : This is our wonderful 404 custom page</p>
   </body>
 </html>
