upload starting to work

--- a/www/test/form.html
+++ b/www/test/form.html
@@ -8,8 +8,9 @@
       <h1>Upload a file on the server</h1>
       <form action="form.html" method="post" enctype="multipart/form-data">
         <text> Envoi ici un fichier binaire </text>
-        <input type="file" name="fileToUpload">
-        <input type="file" name="fileToUpload2">
+        <input type="file" name="fileToUpload"><br>
+        <input type="file" name="fileToUpload2"><br>
+        <input type="file" name="fileToUpload3"><br>
         <input type="submit" value="Upload">
       </form>
     </body>
