fix bug upload lie au cgi

--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,12 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
+	<h1>Webserv 42 </h1>
     <p>This is an example paragraph.
 		Anything in the <strong>body</strong> tag will appear on the page,
 		just like this <strong>p</strong> tag and its contents.</p>
+		<p>
+			<img src="LOGO-YOUPI-DOC-2022-CMJN.png">
+		</p>
   </body>
 </html>
