--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,16 @@
 		Anything in the <strong>body</strong> tag will appear on the page,
 		just like this <strong>p</strong> tag and its contents.</p>
 		<p>
-			<img src="LOGO-YOUPI-DOC-2022-CMJN.png">
+			<img width="30%" src="LOGO-YOUPI-DOC-2022-CMJN.png">
 		</p>
+		<h2>Pages de tests</h2>
+		<p><a href="test/">Dossier test</a><br>
+		<a href="test/form-python">Test CGI Python</a><br>
+		<a href="test/form-php">Test CGI PHP</a><br>
+		<a href="test/form.html">Upload de fichiers</a><br>
+		<a href="test/form_delete.html">Suppression de fichier</a><br>
+		<a href="cgi-bin/set_cookie.py">Definir un cookie</a><br>
+		<a href="cgi-bin/print_cookie.py">Voir le cookie</a><br>
+	</p>
   </body>
 </html>
