--- a/www/test/form_delete.html
+++ b/www/test/form_delete.html
@@ -4,19 +4,26 @@
     <title>Exemple de suppression avec affichage de la réponse</title>
 </head>
 <body>
-    <button id="deleteButton">Supprimer la ressource</button>
+    <h2>Entrez le nom du fichier a supprimer :</h2>
+    <form id="deleteForm">
+        <input type="text" name="fileName" placeholder="Nom du fichier">
+        <button type="submit">Supprimer la ressource</button>
+    </form>
     <div id="responseArea"></div>
 
     <script>
-        document.getElementById("deleteButton").addEventListener("click", function() {
+        document.getElementById("deleteForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Empêcher le rechargement de la page
+            var fileName = document.querySelector("input[name='fileName']").value;
+
             if (confirm("Voulez-vous vraiment supprimer cette ressource ?")) {
                 // Effectuer une requête DELETE avec AJAX
                 var xhr = new XMLHttpRequest();
-                xhr.open("DELETE", "/test/todelete", true);
+                xhr.open("DELETE", "/test/" + fileName, true);
                 xhr.onreadystatechange = function() {
                     if (xhr.readyState === 4) {
                         var responseArea = document.getElementById("responseArea");
-                        responseArea.innerHTML =  xhr.responseText;
+                        responseArea.innerHTML = xhr.responseText;
                     }
                 };
                 xhr.send();
